tests/integration/features/sdoc/document_grammar/validation/09_ENABLE_MID_enabled_but_missing_MID_field/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir Output/ | filecheck %s --dump-input=fail

CHECK: error: could not parse file: {{.*}}input.sdoc.
CHECK: Semantic error: Grammar element 'REQUIREMENT' is missing the MID field which contradicts to the DOCUMENT's ENABLE_MID setting.
CHECK: Location: {{.*}}input.sdoc:1:1
CHECK: Hint: Either disable the ENABLE_MID option or ensure that every element has the MID field defined.
